--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
-    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/amelia.bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/all.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
@@ -11,3 +11,5 @@ html
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js', crossorigin='anonymous')
     script(src='/javascripts/bootstrap.min.js')
+
+//link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
