--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -3,13 +3,28 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
-    link(rel='stylesheet', href='/stylesheets/amelia.bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/all.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    nav.navbar.fixed-top.navbar-expand-md
+      .container
+        a.navbar-brand(href='/') Loc8r
+          button.navbar-toggler.navbar-left(type='button', data-toggle='collapse', data-target='#navbarMain')
+           span.navbar-toggler-icon
+        #navbarMain.navbar-collaps.collapse
+        ul.navbar-nav.mr-auto
+          li.nav-item
+            a.nav-link(href='/about/') About
+
+    .container          
+      block content
+
+      footer
+        .row
+          .col-12
+            small &copy; by 2016250033 Byun Woo Seob
+
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js', crossorigin='anonymous')
     script(src='/javascripts/bootstrap.min.js')
-
-//link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
