--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -24,5 +24,39 @@ block content
                         span.badge.badge-warning Food
                         span.badge.badge-warning Premium wifi
 
+            .card
+                .card-block
+                    h4
+                        a(href='/location') Cafe Hero
+                        small &nbsp;
+                            i.fas.fa-star
+                            i.fas.fa-star
+                            i.fas.fa-star
+                            i.fas.fa-star
+                            i.fas.fa-star
+                        span.badge.badge-pill.badge-default.float-right 100m
+                    p.address 125 High Street, Reading, RG6 1PS
+                    .facilities
+                        span.badge.badge-warning Hot drinks
+                        span.badge.badge-warning Food
+                        span.badge.badge-warning Premium wifi
+
+            .card
+                .card-block
+                    h4
+                        a(href='/location') Burgeer Queen
+                        small &nbsp;
+                            i.fas.fa-star
+                            i.fas.fa-star
+                            i.fas.fa-star
+                            i.fas.fa-star
+                            i.fas.fa-star
+                        span.badge.badge-pill.badge-default.float-right 100m
+                    p.address 125 High Street, Reading, RG6 1PS
+                    .facilities
+                        span.badge.badge-warning Hot drinks
+                        span.badge.badge-warning Food
+                        span.badge.badge-warning Premium wifi
+
         .col-12.col-md-4
             p.lead Loc8r helps you find places to work when out and about.
