--- a/app_server/views/location-info.pug
+++ b/app_server/views/location-info.pug
@@ -1,5 +1,5 @@
 extends layout
-iniclude _includes/sharedHTMLfunctions
+include _includes/sharedHTMLfunctions
 block content
   .row.banner
     .col-12
@@ -35,7 +35,7 @@ block content
           .card.card-primary
             .card-block
               h2.card-title Location map
-              img.img-fluid.rounded(src='https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyDFz1OujY1YOenwa9yX3Ds0OnKI1OTGd-k&center=37.0116648,127.2620489&zoom=17&size=400x350&sensor=false&markers=37.468769,126.964062&scale=2')
+              img.img-fluid.rounded(src='https://maps.googleapis.com/maps/api/staticmap?center=${location.coords.lat},${location.coords.lng}&zoom=17&size=400x350&sensor=false&markers=${location.coords.lat},${location.coords.lng}&scale=2&key=AIzaSyDFz1OujY1YOenwa9yX3Ds0OnKI1OTGd-k')
       .row
         .col-12
           .card.card-primary.review-card
